--- a/code_new/line.html
+++ b/code_new/line.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Sentiment</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    </head>
+<head>
+	<meta charset="utf-8">
+  	<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <style>
+    body {
+      margin: 0px;
+    }
     
+    #parent {
+    text-align:center;
+    }
     
-    <body>
-    <nav class="navbar navbar-inverse bg-inverse">
+    </style>
+ </head> 
+ 
+ 
+<body>
+
+  <nav class="navbar navbar-inverse bg-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" style="color: #ffffff;" href="/">News: A friend or foe</a>
@@ -20,3 +32,9 @@
             </div>
         </div>
     </nav>
+
+  <div id="parent">
+    <img width="780" height="510" src="line_chart.PNG" alt="Mountain View">
+  </div>
+</body>  
+</html> 
